# cs-matchmaking-system

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  diesel.toml
.github/workflows/: validate.yml
common/: Cargo.toml
common/migrations/2025-11-01-235122_create_types/: down.sql  up.sql
common/migrations/2025-11-01-235231_create_players_table/: up.sql
common/migrations/2025-11-01-235405_create_player_sessions_table/: up.sql
common/migrations/2025-11-01-235422_create_api_keys_table/: up.sql
common/migrations/2025-11-01-235504_create_queues_table/: down.sql  up.sql
common/migrations/2025-11-01-235512_create_parties_table/: down.sql  up.sql
common/migrations/2025-11-01-235514_create_queues_entries_table/: down.sql  up.sql
common/migrations/2025-11-01-235538_create_party_members_table/: down.sql  up.sql
common/migrations/2025-11-01-235550_create_party_invitations_table/: down.sql  up.sql
common/migrations/2025-11-01-235601_create_matches_table/: up.sql
common/migrations/2025-11-01-235611_create_match_players_table/: down.sql  up.sql
common/migrations/2025-11-01-235625_create_game_servers_table/: down.sql  up.sql
common/migrations/2025-11-01-235638_create_server_allocations_table/: down.sql  up.sql
common/migrations/2025-11-01-235651_create_player_ratings_table/: down.sql  up.sql
common/migrations/2025-11-01-235703_create_rating_changes_table/: down.sql  up.sql
common/migrations/2025-11-01-235718_create_leaderboard_snapshots_table/: down.sql  up.sql
common/migrations/2025-11-01-235729_create_penalties_table/: down.sql  up.sql
common/migrations/2025-11-01-235739_create_reports_table/: down.sql  up.sql
common/src/: lib.rs  schema.rs
common/src/log/: consts.rs  log_config.rs  mod.rs
common/src/sql_types/: tables.rs  types.rs
services/auth-service/: Cargo.toml  Dockerfile
services/auth-service/src/: main.rs
services/gateway-service/: Cargo.toml  Dockerfile
services/matchmaking-service/: Cargo.toml  Dockerfile
services/party-service/: Cargo.toml  Dockerfile
services/queue-service/: Cargo.toml  Dockerfile
services/queue-service/src/: main.rs
services/rating-service/: Cargo.toml  Dockerfile
services/report-service/: Cargo.toml  Dockerfile
(+6 files in other folders)
