[package]
name = "auth-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
actix-web = { workspace = true }
log = { workspace = true }
common = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
structopt = { workspace = true }